Update 20. Valid Parentheses.ipynb

--- a/20. Valid Parentheses.ipynb
+++ b/20. Valid Parentheses.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "# use stack if left parenthesis shows up, append the stack. \n",
-    "# # if stack is empty, i.e. the first parentheses is a right one, or the i-1 th one in stack is not the corresponding left parentheses \n",
-    "# (by checking the dictionary that maps right parentheses to left ones, then return False.   \n",
+    "# if stack is empty, i.e. the first parentheses is a right one, or the i-1 th one in stack is not the corresponding left parentheses (by checking the dictionary that maps right parentheses to left ones, then return False.   \n",
     "class Solution:\n",
     "        # @param {string} s\n",
     "        # @return {boolean}\n",
