--- a/#414. Third Maximum Number.ipynb
+++ b/#414. Third Maximum Number.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "#414. Third Maximum Number\n",
+    "define a list of three numbers, with initial values of negative infinity, run one iteration in the nums list and check if the current num is among the 3 largest numbers, if so update the list",
     "class Solution(object):\n",
     "    def thirdMax(self, nums):\n",
     "        v = [float('-inf'), float('-inf'), float('-inf')]\n",
